2010-03-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclStubLib.c     Split tommath stub lib
	* generic/tclTomMathStubLib.c   in separate file.
	* win/makefile.bc
	* win/Makefile.in
	* win/makefile.vc
	* win/tcl.dsp
	* unix/Makefile.in
	* unix/tcl.m4           Cygwin only gives warning
	* unix/configure        using -fvisibility=hidden
	* compat/strncasecmp.c     A few more const's
	* compat/strtod.c
	* compat/strtoul.c

2010-03-03  Andreas Kupries <andreask@activestate.com>

	* doc/refchan.n: Followup to ChangeLog entry 2009-10-07
	(generic/tclIORChan.c). Fixed the documentation to explain that
	errno numbers are operating system dependent, and reworked the
	associated example.

2010-03-02  Jan Nijtmans  <nijtmans@users.sf.net>

    * unix/tcl.m4      [Enh 2959069] Support for -fvisibility=hidden
    * unix/configure   (regenerated with autoconf-2.59)

2010-03-01  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* unix/tclUnixSock.c: Refrain  from a possibly lengthy reverse-DNS
	lookup  on  0.0.0.0  when  calling [fconfigure  -sockname]  on  an
	universally-bound (default) server socket.

	* generic/tclIndexObj.c: fix [AT 86258]: special-casing of empty
	tables when generating error messages for [::tcl::prefix match].

2010-02-28  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCmdIL.c: More additions of {TCL LOOKUP} error-code
	generation to various subcommands of [info] as part of long-term
	project to classify all Tcl's generated errors.

2010-02-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclStubInit.c: [Bug 2959713]: Link error with gcc 4.1

2010-02-27  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCmdMZ.c (StringFirstCmd, StringLastCmd): [Bug 2960021]:
	Only search for the needle in the haystack when the needle isn't
	larger than the haystack. Prevents an odd crash from sometimes
	happening when things get mixed up (a common programming error).

	* generic/tclMain.c (Tcl_Main): [Bug 801429]: Factor out the holding